udev 104
========
Bugfixes.

udev 103
========
Add additional check to volume_id detection of via_raid, cause
some company decided to put a matching pattern all over the empty
storage area of their music players.

udev 102
========
Fix path_id for SAS devices.

udev 101
========
The udev daemon can be started with --debug-trace now, which will
execute all events serialized to get a chance to catch a possible
action that crashes the box.

A warning is logged, if PHYSDEV* keys, the "device" link, or a parent
device attribute like $attr{../file} is used, only WAIT_FOR_SYSFS rules
are excluded from the warning. Referencing parent attributes directly
may break when something in the kernel driver model changes. Udev will
just find the attribute by walking up the parent chain.

Udevtrigger now sorts the list of devices depending on the device
dependency, so a "usb" device is triggered after the parent "pci"
device.

udev 100
========
Revert persistent-storage ata-serial '_' '-' replacement.

udev 099
========
Bugfixes.

Udevtrigger can now filter the list of devices to be triggered. Matches
for subsystems or sysfs attributes can be specified.

The entries in /dev/.udev/queue and /dev/.udev/failed have changed to
zero-sized files to avoid pointing to /sys and confuse broken tools which
scan the /dev directory. To retry failed events, udevtrigger --retry-failed
should be used now.

The rules and scripts to create udev rules for persistent network
devices and optical drives are in the extras/rules_generator directory
now. If you use something similar, please consider replacing your own
version with this, to share the support effort. The rule_generator
installs its own rules into /etc/udev/rules.d.

The cdrom_id tool installs its own rule now in /etc/udev/rules.d, cause
the rule_generator depends on cdrom_id to be called in an earlier rule.

udev 098
========
Bugfixes.

Renaming of some key names (the old names still work):